# Tetris

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Tetris/: Tetris.sln
Tetris/Release/: Tetris.iobj  Tetris.ipdb
Tetris/Tetris/: Tetris.vcxproj  Tetris.vcxproj.filters  blockCLASS.h  main.cpp  mapCLASS.h  observerCLASS.h
Tetris/Tetris/Release/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  Tetris.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tetris/Tetris/x64/Debug/: vc141.idb
Tetris/Tetris/x64/Debug/Tetris.tlog/: Tetris.lastbuildstate
Tetris/Tetris/x64/Release/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  Tetris.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tetris/x64/Release/: Tetris.iobj  Tetris.ipdb
src/: Block.cpp  Block.h  CMakeLists.txt  Viewer.h  blockCLASS.h  main.cpp  mapCLASS.h  observerCLASS.h
